# backend-core

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 0001_baseline.py  0002_users.py  0003_orgs.py  0004_billing.py  2f0588b39450_0001_initial_schema.py  3f0588b39450_0002_fk_cascade_deletes.py
skills/api-patterns/: SKILL.md
skills/backend-testing/: SKILL.md
skills/code-style/: SKILL.md
src/: constants.py  main.py
src/api/: README.md  router.py
src/api/v1/: README.md  api_keys.py  audit.py  billing.py  flags.py  health.py  org.py  user.py
src/configs/: README.md
src/configs/settings/: README.md  __init__.py  auth.py  base.py  database.py  external.py
src/core/: README.md  context.py  factory.py  registry.py
src/core/dependencies/: README.md  __init__.py  auth.py  database.py
src/core/exceptions/: README.md  __init__.py  base.py  envelope.py  handlers.py  types.py
src/core/middleware/: README.md  __init__.py  api.py  cors.py  rate_limit.py  request.py  timeout.py
src/models/: README.md  __init__.py  api_key.py  audit.py  base.py  billing.py  flag.py  org.py  user.py
src/repositories/: README.md  __init__.py  api_key.py  audit.py  base.py  billing.py  flag.py  org.py  user.py
src/schemas/: README.md  auth.py  common.py  health.py
src/schemas/api_key/: __init__.py  requests.py  responses.py
src/schemas/audit/: __init__.py  responses.py
src/schemas/billing/: __init__.py  requests.py  responses.py
src/schemas/flag/: __init__.py  requests.py  responses.py
src/services/: README.md
src/utils/: README.md  auth.py  logging.py  middleware.py
tests/: README.md  conftest.py
tests/integration/: README.md  conftest.py  test_error_handlers.py  test_health.py  test_org.py  test_user.py  test_user_endpoints.py
tests/unit/: README.md  test_api_key_service.py  test_audit_service.py  test_billing_service.py  test_flag_service.py  test_org_service.py  test_transaction.py  test_user_service.py
(+26 files in other folders)
