[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-core"
version = "0.1.0"
description = "A minimal unified Python interface for backend SaaS products."
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "PyJWT>=2.9.0",
    "cryptography>=43.0.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "email-validator>=2.0.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-env>=1.1.0",
    "asgi-lifespan>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires a real database — needs TEST_DATABASE_URL, never run against production",
    "unit: no database, all repositories mocked",
]
env = [
    "APP_NAME=backend-core-test",
    "APP_VERSION=0.0.0",
    "DEBUG=false",
    "CORS_ORIGINS=[\"http://localhost:3000\"]",
    "REQUEST_TIMEOUT_SECONDS=30",
    "RATE_LIMIT_DEFAULT=1000/minute",
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost/test",
    "SUPABASE_URL=https://test.supabase.co",
    "SUPABASE_JWT_SECRET=test-secret",
    "SUPABASE_ANON_KEY=test-anon-key",
    "SUPABASE_SERVICE_ROLE_KEY=test-service-role-key",
    "DATABASE_POOL_SIZE=2",
    "DATABASE_MAX_OVERFLOW=2",
    "DATABASE_POOL_TIMEOUT=10",
    "DATABASE_POOL_RECYCLE=3600",
    "STRIPE_SECRET_KEY=",
    "STRIPE_WEBHOOK_SECRET=",
    "STRIPE_PRO_MONTHLY_PRICE_ID=",
    "STRIPE_PRO_YEARLY_PRICE_ID=",
    "STRIPE_ENTERPRISE_PRICE_ID=",
    "RESEND_API_KEY=",
]